--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "swiper": "^6.4.11",
     "vue-template-compiler": "^2.6.11"
   }
 }
